# recoverlite-py

./: .gitignore  .zenodo.json  CITATION.cff  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yaml  publish.yml
src/recoverlite/: __init__.py  _utils.py  constructors.py  diagnosands.py  fragility.py  lmm.py  recovery_test.py  report.py  scenarios.py  simulate.py  stopping.py  thresholds.py  verdict.py
tests/: test_constructors.py  test_lmm_inference.py  test_smoke_and_r_crosscheck.py  test_stopping.py  test_thresholds_scenarios.py  test_verdict.py
tests/data/: gen_lmm_datasets.py  lmm_reference.json  r_lmm_reference.R
tests/data/lmm_datasets/: balanced_16x30_icc05.csv  balanced_16x30_icc15.csv  near_zero_icc.csv  null_effect.csv  small_8x10_icc05.csv  unbalanced_12.csv
